--- a/matrix/src/App.css
+++ b/matrix/src/App.css
@@ -3,7 +3,7 @@
     font-family: 'Monocraft';
     font-style: normal;
     font-weight: 400;
-    src: url('../src/assets/Monocraft.otf') format('woff'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+    src: url('assets/font/Monocraft.otf') format('woff'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 
