--- a/matrix/src/assets/styles/Header.css
+++ b/matrix/src/assets/styles/Header.css
@@ -12,7 +12,7 @@ body {
 .pin {
     display: flex;
     align-items: center;
-    margin-right: 5px; /* Дистанция между стрелкой и текстом */
+    margin-right: 5px;
 }
 
 .header {
@@ -23,7 +23,7 @@ body {
     margin-left: 5%;
     padding: 20px;
     height: 80px;
-    width: 90%; /* Ширина на всю страницу */
+    width: 90%;
     border-radius: 20px;
     background: #171616;
 }
@@ -50,14 +50,14 @@ body {
 }
 
 .nav-list li a:hover {
-    text-shadow: 0 0 10px #00FF00; /* Зеленый цвет при наведении */
+    text-shadow: 0 0 10px #00FF00;
 }
 
 .logo {
     display: flex;
     align-items: center;
     margin-right: 20px;
-    text-shadow: 0 0 10px #00FF00; /* Отступ справа для красивого выравнивания */
+    text-shadow: 0 0 10px #00FF00;
 }
 
 .logo img {
@@ -72,5 +72,5 @@ body {
 }
 
 .logo-text span {
-    color: #00FF00; /* Зеленый цвет для "Yellow Pine" */
+    color: #00FF00;
 }
